syntax = "proto3";

option java_package = "bxc.analysis.service.getservicestatus";
option java_multiple_files = true;

message GetServiceStatusRequest{
}

message GetServiceStatusResponse {
  bool is_active = 1;
}